<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.AboutAppActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/desc_about"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ariefusufwinata"
            />
        <TextView
            android:id="@+id/tvArief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arief_yusuf_winata"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/tvDeskripsiArief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front_end"
            android:textAlignment="center"
            android:textSize="16sp"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageWanda"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/wandaaprianingrum"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:id="@+id/tvWanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wanda_aprianingrum"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/tvDeskripsiWanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_ux"
            android:textAlignment="center"
            android:textSize="16sp"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/maisyyazid"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:id="@+id/tvYazid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma_isy_yazid_i"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/tvDeskripsiYazid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_end"
            android:textAlignment="center"
            android:textSize="16sp"
            />

    </TableLayout>
</ScrollView>