<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/background"
    tools:context=".presenter.ui.auth.RegisterActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvMamieRus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuk_daftar_akun"
        android:textAlignment="center"
        android:textSize="22sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/grey_100"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        />

    <TextView
        android:id="@+id/tvNamaPengguna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_pengguna"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tvMamieRus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/edtNamaPengguna"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/customize_input"
        android:hint="@string/masukkan_nama_pengguna"
        android:fontFamily="@font/poppins_semibold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNamaPengguna"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvNoHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomor_hp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNamaPengguna"
        />

    <EditText
        android:id="@+id/edtNoHP"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/customize_input"
        android:hint="@string/masukkan_nomor_hp"
        android:fontFamily="@font/poppins_semibold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoHP"
        android:autofillHints=""
        android:inputType="number" />

    <TextView
        android:id="@+id/tvKataSandi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kata_sandi"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNoHP"
        />

    <EditText
        android:id="@+id/edtKataSandi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/customize_input"
        android:hint="@string/masukkan_kata_sandi"
        android:fontFamily="@font/poppins_semibold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKataSandi"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtKataSandi"
        />


    <TextView
        android:id="@+id/tvSudahPunyaAkun"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sudah_mempunyai_akun"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMasuk"
        app:layout_constraintTop_toBottomOf="@+id/btnDaftar" />

    <TextView
        android:id="@+id/btnMasuk"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/masuk"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvSudahPunyaAkun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSudahPunyaAkun"
        app:layout_constraintTop_toTopOf="@+id/tvSudahPunyaAkun" />

</androidx.constraintlayout.widget.ConstraintLayout>