<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".presenter.ui.auth.LoginActivity"
    >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvMamieRus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textAlignment="center"
        android:textSize="22sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/grey_100"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        />

    <TextView
        android:id="@+id/tvNamaPengguna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_pengguna"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:layout_marginTop="35dp"
        android:textColor="@color/grey_100"
        app:layout_constraintTop_toBottomOf="@id/tvMamieRus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/edtNamaPengguna"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:textSize="14sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/masukkan_nama_pengguna"
        android:background="@drawable/customize_input"
        app:layout_constraintTop_toBottomOf="@id/tvNamaPengguna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvKataSandi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kata_sandi"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:textColor="@color/grey_100"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNamaPengguna"
        />

    <EditText
        android:id="@+id/edtKataSandi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/customize_input"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/masukkan_kata_sandi"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKataSandi" />

    <TextView
        android:id="@+id/btnForget"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/lupa_kata_sandi"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/main"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtKataSandi" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        app:cornerRadius="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForget"
        />

    <TextView
        android:id="@+id/tvBelumPunyaAkun"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:gravity="center"
        android:text="@string/belum_mempunyai_akun"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDaftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/btnDaftar"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/daftar"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/main"
        android:layout_marginEnd="100dp"
        app:layout_constraintStart_toEndOf="@id/tvBelumPunyaAkun"
        app:layout_constraintBottom_toBottomOf="@+id/tvBelumPunyaAkun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvBelumPunyaAkun"/>

</androidx.constraintlayout.widget.ConstraintLayout>