<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.ui.PortalScreenActivity">

    <ImageView
        android:id="@+id/tvImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/imageview"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_login"
        />

    <TextView
        android:id="@+id/tvMamieRus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mamie_rus"
        android:textAlignment="center"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvImage"

        />

    <TextView
        android:id="@+id/tvDeskripsi"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kami_menyediakan"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMamieRus" />

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/masuk"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeskripsi"
        />

    <Button
        android:id="@+id/btnDaftar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/daftar"
        app:cornerRadius="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:strokeColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/btnLewati"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/lewati"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDaftar" />

</androidx.constraintlayout.widget.ConstraintLayout>